[package]
name = "weird"
version = "0.1.0"
edition = "2024"

[dependencies]
# Locked to 8.2.0, `cargo update zip` bumps to 8.4.0.
zip = { version = ">=8.2.0, <=8.4.0", default-features = false, features = ["deflate", "chrono"] }
# Pinned: depends on windows 0.61.3 -> windows-core ^0.61.2
wmi = "=0.18.3"
# Pinned: forces windows-core 0.62.2 to coexist alongside 0.61.2
windows = { version = "=0.62.2", features = ["Win32_System_Com"] }
